quick fix for content overlap on mobile devices

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -384,7 +384,7 @@ h3 {
 		display: flex;
 		gap: 20px;
 		.skills-header {
-			height: 7em;
+/* 			height: 7em; */
 		}
 
 		@media (max-width: 425px) {
